Made ir more responsive

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h3 data-sv="Freaky Fashion - Responsiv E-handel" data-en="Freaky Fashion - Responsive E-commerce">
         Freaky Fashion - Responsiv E-handel
       </h3>
-      <video src="videos/freakyfashion.mp4" controls width="100%"></video>
+      <video src="videos/freaky1.mp4" controls width="100%"></video>
       <p data-sv="En e-handel sida där fokus låg på responsiv design, semantisk HTML och CSS." 
          data-en="An e-commerce website focused on responsive design, semantic HTML and CSS.">
          En e-handel sida där fokus låg på responsiv design, semantisk HTML och CSS.
