Fixed text on productcard

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
     </div>
 
 <div class="project-card">
-  <h3 data-sv="Freaky Fashion - Responsiv E-handel" 
-      data-en="Freaky Fashion - Responsive E-commerce">
-    Freaky Fashion - Responsiv E-handel
+  <h3 data-sv="Freaky Fashion – Interaktiv E-handel med Angular & SQL"
+      data-en="Freaky Fashion – Interactive E-commerce with Angular & SQL">
+    Freaky Fashion - Interaktiv E-handel med Angular & SQL
   </h3>
 
   <!-- Bildgalleri -->
